--- a/tool/test2.html
+++ b/tool/test2.html
@@ -1,6 +1,6 @@
 <script src="https://ggldrs.com/assets/js/jquery-1.10.1.min.js"></script>
 <script>
-$("#access_button").click();
+$("a#access_button").trigger('click')
   
   </script>
 Hallo test
